Live Proving Observations - Live NIRS
Changed the journey for launching NIRS to include pop-up for manual launch in Attended.

Changed several selectors that were hard-coded to Dev.

--- a/SIRP/Process/Process Subflows/Enter Reporter Details.xaml
+++ b/SIRP/Process/Process Subflows/Enter Reporter Details.xaml
@@ -9,7 +9,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1235,1052</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1198,1052</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Enter_Report_Details_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -111,7 +111,7 @@
           <av:PointCollection x:Key="ConnectorLocation">390,210.5 390,260.5</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <Sequence DisplayName="Enter Reported Date &amp; Time" sap:VirtualizedContainerService.HintSize="200,83" sap2010:WorkflowViewState.IdRef="Sequence_1">
+      <Sequence DisplayName="Enter Reported Date &amp; Time" sap:VirtualizedContainerService.HintSize="548,950" sap2010:WorkflowViewState.IdRef="Sequence_1">
         <Sequence.Variables>
           <Variable x:TypeArguments="str:Match" Name="matDateReported" />
         </Sequence.Variables>
@@ -168,7 +168,7 @@
               </ui:TypeInto>
               <ui:TypeInto AlterIfDisabled="{x:Null}" ClickBeforeTyping="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" SimulateType="{x:Null}" Activate="True" DisplayName="Type &quot;Time Notified&quot;" EmptyField="True" sap:VirtualizedContainerService.HintSize="388,135" sap2010:WorkflowViewState.IdRef="TypeInto_46" Text="[strTimeReported]">
                 <ui:TypeInto.Target>
-                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="d21f0a69-85e6-4f1a-934f-f6a7432f7967" InformativeScreenshot="57dc19b7fe1c72584e0b65e1d029b2cd" Selector="&lt;wnd app='irs.exe' cls='ThunderRT6FormDC' isremoteapp='1' title='T&amp;amp;I - Input New Notification' /&gt;&lt;wnd cls='ThunderRT6FormDC' title='New Incident' /&gt;&lt;wnd cls='MSMaskWndClass' idx='2' /&gt;">
+                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="d21f0a69-85e6-4f1a-934f-f6a7432f7967" InformativeScreenshot="57dc19b7fe1c72584e0b65e1d029b2cd" Selector="&lt;wnd app='irs.exe' cls='ThunderRT6FormDC' isremoteapp='1' title='*Input New Notification' /&gt;&lt;wnd cls='ThunderRT6FormDC' title='New Incident' /&gt;&lt;wnd cls='MSMaskWndClass' idx='2' /&gt;">
                     <ui:Target.TimeoutMS>
                       <InArgument x:TypeArguments="x:Int32" />
                     </ui:Target.TimeoutMS>
@@ -2554,7 +2554,7 @@
                               </ui:CursorPosition>
                             </ui:Click.CursorPosition>
                             <ui:Click.Target>
-                              <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="b825c10c-cbdc-4b9d-bbba-5bf35416bcdb" InformativeScreenshot="3812ea7105df52c9d935271d01952dbf" Selector="&lt;wnd app='irs.exe' cls='ThunderRT6FormDC' isremoteapp='1' title='T&amp;amp;I - Input New Notification' /&gt;&lt;wnd cls='ThunderRT6FormDC' title='New Incident' /&gt;&lt;wnd cls='ThunderRT6Frame' title='Reporter Type' /&gt;&lt;wnd cls='ThunderRT6Frame' idx='2' title='Frame1' /&gt;&lt;wnd cls='ThunderRT6Frame' idx='2' title='Frame1' /&gt;&lt;wnd cls='ThunderRT6CommandButton' title='Delete Row' /&gt;">
+                              <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="b825c10c-cbdc-4b9d-bbba-5bf35416bcdb" InformativeScreenshot="3812ea7105df52c9d935271d01952dbf" Selector="&lt;wnd app='irs.exe' cls='ThunderRT6FormDC' isremoteapp='1' title='*Input New Notification' /&gt;&lt;wnd cls='ThunderRT6FormDC' title='New Incident' /&gt;&lt;wnd cls='ThunderRT6Frame' title='Reporter Type' /&gt;&lt;wnd cls='ThunderRT6Frame' idx='2' title='Frame1' /&gt;&lt;wnd cls='ThunderRT6Frame' idx='2' title='Frame1' /&gt;&lt;wnd cls='ThunderRT6CommandButton' title='Delete Row' /&gt;">
                                 <ui:Target.TimeoutMS>
                                   <InArgument x:TypeArguments="x:Int32" />
                                 </ui:Target.TimeoutMS>
@@ -2747,7 +2747,7 @@
                     </ui:RetryScope>
                     <ui:TypeInto AlterIfDisabled="{x:Null}" ClickBeforeTyping="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" Activate="True" DisplayName="Type &quot;reporterEmail&quot;" EmptyField="True" sap:VirtualizedContainerService.HintSize="588,135" sap2010:WorkflowViewState.IdRef="TypeInto_43" SimulateType="True" Text="[in_jobRoboticsJSON(&quot;reporterEmail&quot;).ToString]">
                       <ui:TypeInto.Target>
-                        <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="d21f0a69-85e6-4f1a-934f-f6a7432f7967" InformativeScreenshot="339c0e3cc7598b0154b98ee9884459b7" Selector="&lt;wnd app='irs.exe' cls='ThunderRT6FormDC' isremoteapp='1' title='T&amp;amp;I - Input New Notification' /&gt;&lt;wnd cls='ThunderRT6FormDC' title='New Incident' /&gt;&lt;wnd cls='ThunderRT6Frame' title='Reporter Type' /&gt;&lt;wnd cls='ThunderRT6Frame' idx='2' title='Frame1' /&gt;&lt;wnd cls='ThunderRT6Frame' idx='2' title='Frame1' /&gt;&lt;wnd cls='ThunderRT6TextBox' idx='{{strContactNumberIndex}}' /&gt;">
+                        <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="d21f0a69-85e6-4f1a-934f-f6a7432f7967" InformativeScreenshot="339c0e3cc7598b0154b98ee9884459b7" Selector="&lt;wnd app='irs.exe' cls='ThunderRT6FormDC' isremoteapp='1' title='*Input New Notification' /&gt;&lt;wnd cls='ThunderRT6FormDC' title='New Incident' /&gt;&lt;wnd cls='ThunderRT6Frame' title='Reporter Type' /&gt;&lt;wnd cls='ThunderRT6Frame' idx='2' title='Frame1' /&gt;&lt;wnd cls='ThunderRT6Frame' idx='2' title='Frame1' /&gt;&lt;wnd cls='ThunderRT6TextBox' idx='{{strContactNumberIndex}}' /&gt;">
                           <ui:Target.TimeoutMS>
                             <InArgument x:TypeArguments="x:Int32" />
                           </ui:Target.TimeoutMS>
@@ -2941,7 +2941,7 @@
                 <av:Size x:Key="ShapeSize">200,53</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:Click AlterIfDisabled="{x:Null}" DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" ClickType="CLICK_SINGLE" DisplayName="Click &quot;Anonymous&quot;" sap:VirtualizedContainerService.HintSize="334,107" sap2010:WorkflowViewState.IdRef="Click_50" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
+            <ui:Click AlterIfDisabled="{x:Null}" DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" ClickType="CLICK_SINGLE" DisplayName="Click &quot;Anonymous&quot;" sap:VirtualizedContainerService.HintSize="200,53" sap2010:WorkflowViewState.IdRef="Click_50" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
               <ui:Click.CursorPosition>
                 <ui:CursorPosition Position="Center">
                   <ui:CursorPosition.OffsetX>
